<resources>
    <string name="app_name" >Timer</string>
    <string name="reset_name" translatable="false">reset</string>
    <string name="prepare">Prepare</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="cycle">Cycle</string>
    <string name="sets">Sets</string>
    <string name="name">Name</string>
    <string name="item_color">Item Color</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="format_seconds">%d sec</string>
    <string name="action_settings">Settings</string>
    <string name="font_sum">Application font size</string>
    <string name="font_title">Font size</string>
    <string name="night_sum">Enable dark theme</string>
    <string name="night_title">Dark theme</string>
    <string name="lang_sum">Application language </string>
    <string name="lang_title">language</string>
    <string name="reset_sum">Reset all data</string>
    <string name="reset_title">Reset</string>


    <string-array name="font_sizes">
        <item>small</item>
        <item>middle</item>
        <item>big</item>
    </string-array>
    <string-array name="font_sizes_values">
        <item>0.75</item>
        <item>1</item>
        <item>1.5</item>
    </string-array>

    <string-array name="languages">
        <item>русский</item>
        <item>english</item>
    </string-array>

    <string-array name="languages_values">
        <item>ru</item>
        <item>en</item>
    </string-array>
</resources>