<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <ListPreference
        android:layout_width="match_parent"
        android:entries="@array/font_sizes"
        android:entryValues="@array/font_sizes_values"
        android:key="font_size"
        android:summary="@string/font_sum"
        android:title="@string/font_title" />

    <CheckBoxPreference
        android:layout_width="match_parent"
        android:key="night"
        android:summary="@string/night_sum"
        android:title="@string/night_title" />
    <ListPreference
        android:layout_width="match_parent"
        android:entries="@array/languages"
        android:entryValues="@array/languages_values"
        android:key="lang"
        android:summary="@string/lang_sum"
        android:title="@string/lang_title" />
    <Preference
        android:layout_width="match_parent"
        android:key="@string/reset_name"
        android:summary="@string/reset_sum"
        android:title="@string/reset_title" />

</PreferenceScreen>