<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginHorizontal="30dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/prepare"
                    android:textSize="20sp">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/prepare_dec"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_baseline_chevron_left_24" />

                    <TextView
                        android:id="@+id/prepare_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="10" />

                    <ImageButton
                        android:id="@+id/prepare_inc"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_baseline_chevron_right_24" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/work"
                    android:textSize="20sp">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/work_dec"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_baseline_chevron_left_24" />

                    <TextView
                        android:id="@+id/work_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="10" />

                    <ImageButton
                        android:id="@+id/work_inc"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_baseline_chevron_right_24" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/rest"
                    android:textSize="20sp">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/rest_dec"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_baseline_chevron_left_24" />

                    <TextView
                        android:id="@+id/rest_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="10" />

                    <ImageButton
                        android:id="@+id/rest_inc"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_baseline_chevron_right_24" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/cycle"
                    android:textSize="20sp">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/cycle_dec"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_baseline_chevron_left_24" />

                    <TextView
                        android:id="@+id/cycle_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="10" />

                    <ImageButton
                        android:id="@+id/cycle_inc"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_baseline_chevron_right_24" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/sets"
                    android:textSize="20sp">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/sets_dec"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_baseline_chevron_left_24" />

                    <TextView
                        android:id="@+id/sets_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="10" />

                    <ImageButton
                        android:id="@+id/sets_inc"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_baseline_chevron_right_24" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/item_color"
                    android:textSize="20sp" />

                <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
                    android:id="@+id/color_picker"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:hslColoringMode="pure"
                    app:hslMode="hue" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>